# numpy_bitarray

./: README.md  pylintrc  pyproject.toml
src/numpy_bitarray/: __init__.py  bitarray.py
tests/: test_basic.py
